# journaltxt

./: .gitignore  LICENSE  MANIFEST.in  README.txt  pyproject.toml
src/journaltxt/: __init__.py  builder.py  cli.py  parser.py  version.py
tests/: __init__.py  conftest.py  test_builder.py  test_cli.py  test_parser.py  test_version.py
